--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,18 @@
 [project]
 name = "my-first-website"
 version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "flask>=3.1.0",
-    "psycopg2-binary>=2.9.10",
+description = "This is my first website"
+authors = [
+    {name = "Alina Makarovskaya",email = "makarovskaya1307@gmail.com"}
 ]
+readme = "README.md"
+requires-python = ">=3.11"
+dependencies = [
+    "flask (>=3.1.0,<4.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)"
+]
+
+
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
